appmenu: Skip switcher and task manager

BUG:437165


(cherry picked from commit 185a5245c784883c4d72cb3b22582260799fab97)